fix: adjusts spacing in  home page

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -54,3 +54,10 @@ body {
   background-position: center;
 } 
 */
+
+selector .swiper-wrapper {
+  -webkit-transition-timing-function: linear !important;
+  -moz-transition-timing-function: linear !important;
+  -o-transition-timing-function: linear !important;
+  transition-timing-function: linear !important;
+}
